# scratch

./: .gitignore  LICENSE
lbe_imgui_cpp/scripts/: build.sh
lbe_imgui_cpp/src/: main.cpp  wave_cuda.cu  wave_cuda.h
neuron_growth_sim/: main.py
neuron_growth_sim/src/: main.cpp
wave3d_imgui_cpp/: CMakeLists.txt
wave3d_imgui_cpp/src/: main.cpp  temp.cpp  wave_cuda.cu
wave_imgui_cpp/: vcpkg.json
wave_imgui_cpp/scripts/: requirements.sh
wave_imgui_cpp/src/: main.cpp
wave_matplotlib_cpp/: CMakeLists.txt  t
wave_matplotlib_cpp/src/: main  wave_matplotlibcpp.cpp
wave_matplotlibcpp_cpp/src/: wave_matplotlibcpp.cpp
wave_opengl_cpp/src/: plotter  plotter_opengl.cpp
wave_qt_cpp/include/: main.h
wave_qt_cpp/src/: main.cpp
